<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="18dp"
        android:paddingTop="16dp"
        android:paddingEnd="18dp"
        android:paddingBottom="10dp"
        android:text="@string/homepage_edit_module"
        android:textColor="@color/primaryText"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:text="@string/homepage_module_type"
        android:textColor="@color/secondaryText"
        android:textSize="12sp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false"
        android:paddingStart="18dp"
        android:paddingTop="8dp"
        android:paddingEnd="18dp"
        android:scrollbars="horizontal">

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/fl_types"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:flexWrap="nowrap" />

    </androidx.core.widget.NestedScrollView>

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="18dp"
        android:hint="@string/homepage_module_title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="14sp"
        tools:text="标题" />

    <EditText
        android:id="@+id/et_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="18dp"
        android:hint="@string/homepage_module_url"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:maxLines="1"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_args"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="18dp"
        android:hint="@string/homepage_module_args"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="@string/cancel"
            android:textColor="@color/secondaryText" />

        <io.legado.app.ui.widget.text.AccentTextView
            android:id="@+id/tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>
